# path_tracer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: SecurityAudit.yml  rust.yml
src/: aabb.rs  axis.rs  camera.rs  hit.rs  main.rs  material.rs  ray.rs  sphere.rs  tracer.rs  util.rs  vec.rs
src/accelerators/: accelerator.rs  bvh.rs  mod.rs
src/primitives/: sphere.rs  triangle.rs
src/utils/: aabb.rs  axis.rs  mod.rs  stack.rs  util.rs
supply-chain/: config.toml
