[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"
authors = ["Sajjadul Islam <sajjadul.islam.bd@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
image = "0.24.5"
rayon = "1.7.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
glam = "0.23.0"
egui = "0.21.0"

[profile.release]
panic = 'abort'