[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"
authors = ["Sajjadul Islam <sajjadul.islam.bd@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
image = "0.24.7"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
glam = "0.25.0"
egui = "0.24.1"
winit = "0.29.6"

[profile.release]
panic = 'abort'
