[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"
authors = ["Sajjadul Islam <sajjadul.islam.bd@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
image = {version = "0.25.0", features = ["rayon"] }
rayon = "1.9.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
glam = "0.25.0"

[profile.dev]
opt-level = 1


[profile.release]
panic = 'abort'
opt-level = 3
